Bug 339972 - Windows runner doesn't work after login
Summary: Windows runner doesn't work after login
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: windows (other bugs)
Version First Reported In: 5.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-15 09:18 UTC by Lasse Liehu
Modified: 2014-12-13 00:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2014-10-15 09:18:36 UTC
Windows runner doesn't seem to work after krunner was started automatically during login. Restarting krunner by doing kquitapp krunner and then krunner in console makes the same steps give expected results. Also just touching krunnerrc without any modifications will do the same.

Versions of frameworks and plasma are git master from a few days ago.

Translation language didn't seem to have an effect. Tested with both American English and Finnish. Anyway, I don't have an enabledCategories entry in krunnerrc. Also tested having every runner listed in enabledCategories. That didn't change the behavior, though I only tested that with Finnish as translation language. The runner names in enabledCategories seem to be saved using the current translation language.

Reproducible: Always

Steps to Reproduce:
1. Log in.
2. Start KWrite and wait for its window to appear.
3. Press Alt+F2, type "kwrite" and wait for 5 seconds.

Actual Results:  
The KWrite window does not appear in search results.

Expected Results:  
The KWrite window appears in search results.
Comment 1 Vishesh Handa 2014-11-27 16:09:48 UTC
Confirmed. There definitely seems to be a problem. I have certain windows which show up (kdevelop) but launching an application does not seem to make it appear in the search results.

Please remember to mark the version number in the bug report. KDE4 bugs have a lower priority than Plasma5.
Comment 2 Weng Xuetian 2014-12-13 00:13:45 UTC
Git commit 227415203485fa92f1f229cd980bae699aeb3659 by Weng Xuetian.
Committed on 13/12/2014 at 00:12.
Pushed by xuetianweng into branch 'Plasma/5.1'.

Call RunnerManager::matchSessionComplete when clear the model

krunner expects matchSessionComplete to be called for triggering some
signals.

REVIEW: 121452

M  +1    -0    lib/sourcesmodel.cpp

http://commits.kde.org/milou/227415203485fa92f1f229cd980bae699aeb3659