Call RunnerManager::matchSessionComplete when clear the model

krunner expects matchSessionComplete to be called for triggering some
signals.

REVIEW: 121452
BUG: 339972